Fix outline button on mobile

--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -47,15 +47,26 @@
   }
 }
 .btn-outline {
+  position: relative;
   background: #fff;
   padding: 12px 32px 12px 28px;
   border: 0;
-  outline: 2px solid $primary-color;
   -webkit-transition: all .3s;
   -o-transition: all .3s;
   transition: all .3s;
   font-family: "mulish-bold", serif;
   color: $primary-color;
+  &:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-radius: 24px;
+    border: 2px solid $primary-color;
+  }
   &.small {
     padding: 5px 16px 5px 16px;
   }
@@ -64,16 +75,20 @@
     padding: 2px 8px;
     &.active {
       color: $secondary-color;
-      outline: 2px solid $secondary-color;
+      &:after {
+        border: 2px solid $secondary-color;
+      }
     }
   }
   &:hover {
-    outline-width: 3px;
-    -webkit-transition: all .3s;
-    -o-transition: all .3s;
-    transition: all .3s;
     &.small {
       padding: 5px 31px 5px 27px;
+    }
+    &:after {
+      border: 3px solid $primary-color;
+      -webkit-transition: all .3s;
+      -o-transition: all .3s;
+      transition: all .3s;
     }
   }
 }
